[package]
name = "pullpush"
version = "0.1.0"
authors = ["Steve <stevemflanagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.3.9"
log = "0.4.11"
stderrlog = "0.4.3"
config = "0.10.1"
url = {version = "2.1.1"}
anyhow = "1.0.32"
threadpool = "1.8.1"
crossbeam-channel = "0.4.3"
structopt = "0.3.16"
#libssh2-sys = "0.2.18"
ssh2 = "0.8.2"
chrono = "0.4.13"
