[package]
name = "pullpush"
version = "0.1.1"
authors = ["Steve <stevemflanagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
rustflags = ["-C", "target-cpu=native"]

[build-dependencies]
vergen = "3.1.0"


[profile.release]
debug=1
#lto = true
#codegen-units=1
#opt-level = 3
#panic = 'abort'  # does cleanup upon panics
#rustflags = ["-C", "target-cpu=native"]

[[bin]]
name="ls_time"
path="src/ls.rs"


[dependencies]
regex = "1.3.9"
log = "0.4.11"
env_logger ="0.7.1"
config = "0.10.1"
url = {version = "2.1.1"}
anyhow = "1.0.32"
threadpool = "1.8.1"
crossbeam-channel = "0.4.3"
structopt = "0.3.16"
ssh2 = "0.8.2"
libssh2-sys = "0.2"
chrono = "0.4.13"
lazy_static = "1.4.0"
