[package]
name = "pullpush"
version = "0.1.1"
authors = ["Steve <stevemflanagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build]
#rustflags = ["-C", "target-cpu=native"]

[build-dependencies]
vergen = "3.1.0"


[profile.release]
debug=1
# these OPT add about 15% in reducing user cpu time
#lto = true
#codegen-units=1
opt-level = 3
#target-cpu="native"


[[bin]]
name="ls_time"
path="src/ls.rs"

[[bin]]
name="test_vfs"
path="src/test_vfs.rs"

[[bin]]
name="short_tests"
path="src/test.rs"

[dependencies]
pcre2 = "0.2.3"
log = "0.4.11"
env_logger ="0.7.1"
config = "0.10.1"
url = {version = "2.1.1"}
anyhow = "1.0.32"
threadpool = "1.8.1"
crossbeam-channel = "0.4.3"
structopt = "0.3.16"
ssh2 = "0.8.2"
libssh2-sys = "0.2"
chrono = "0.4.13"
lazy_static = "1.4.0"
tokio = {version = "0.2.*", features = ["full"] }
futures = "0.3.5"
csv = "1.1.3"
simplelog = "0.8.0"
lexical = "5.2.0"
cpu-time = "1.0.0"
fxhash = "0.2.1"
hashbrown = "0.8.2"
smallvec = "1.4.2"